chore: setup root package.json and update vercel.json for deployment

--- a/vercel.json
+++ b/vercel.json
@@ -7,17 +7,7 @@
     },
     {
       "source": "/(.*)",
-      "destination": "/frontend/dist/index.html"
-    }
-  ],
-  "builds": [
-    {
-      "src": "frontend/package.json",
-      "use": "@vercel/vite"
-    },
-    {
-      "src": "api/index.js",
-      "use": "@vercel/node"
+      "destination": "/frontend/dist/$1"
     }
   ]
 }
