--- a/vercel.json
+++ b/vercel.json
@@ -6,8 +6,9 @@
       "destination": "/api/index.js"
     },
     {
-      "source": "/(.*)",
+      "source": "/((?!api/).*)",
       "destination": "/public/$1"
     }
-  ]
+  ],
+  "cleanUrls": true
 }
