fix: refine vercel build and routing

--- a/vercel.json
+++ b/vercel.json
@@ -6,9 +6,8 @@
       "destination": "/api/index.js"
     },
     {
-      "source": "/((?!api/).*)",
+      "source": "/(.*)",
       "destination": "/public/$1"
     }
-  ],
-  "cleanUrls": true
+  ]
 }
