--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "private": true,
     "scripts": {
         "build": "cd frontend && npm install && npm run build && cd .. && rm -rf public && mv frontend/dist public",
-        "install-all": "npm install && cd api && npm install && cd ../frontend && npm install"
+        "install-all": "npm install && cd api && npm install && cd ../frontend && npm install",
+        "vercel-install": "npm run install-all"
     }
 }
